Allure Generatior: Allure generator class modification